--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,7 +2,7 @@
 import Header from "../components/Header.astro";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -30,7 +30,25 @@ import Header from "../components/Header.astro";
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <script defer src="/_vercel/insights/script.js"></script>
+    <script>
+      import mixpanel from "mixpanel-browser";
+      import FingerprintJS from "@fingerprintjs/fingerprintjs";
+
+      const fp = await FingerprintJS.load();
+      const { visitorId } = await fp.get();
+
+      mixpanel.init("20add051a35a38f78ef76d9eff64cc00", {
+        debug: true,
+        track_pageview: true,
+        persistence: "localStorage",
+        ignore_dnt: true,
+      });
+
+      mixpanel.identify(visitorId);
+      const response = await fetch("https://ipapi.co/json/");
+      const data = await response.json();
+      mixpanel.track("User info", { ...data, network_address: data.ip });
+    </script>
   </head>
   <body>
     <div
