--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -6,22 +6,29 @@ import Header from "../components/Header.astro";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Daniel Vulić</title>
-    <meta name="description" content="Personal portfolio website" />
+    <title>Daniel Vulić - Full Stack Web Developer</title>
+    <meta
+      name="description"
+      content="From web apps to games, Daniel Vulić is a passionate full-stack web developer and hobby game developer, crafting digital experiences. Explore Daniel's creations, skills, and get in touch!"
+    />
     <link rel="manifest" href="/manifest.json" />
     <meta
       name="keywords"
-      content="developer,web,game,frontend,backend,react,angular,daniel,vulic"
+      content="developer,web,game,frontend,backend,nuxt,nextjs,angular,daniel,vulic"
     />
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Daniel Vulić" />
-    <meta property="og:description" content="Personal portfolio website" />
+    <meta
+      property="og:description"
+      content="From web apps to games, Daniel Vulić is a passionate full-stack web developer and hobby game developer, crafting digital experiences. Explore Daniel's creations, skills, and get in touch!"
+    />
     <meta property="og:url" content="https://vooolox.xyz" />
     <meta property="og:site_name" content="Daniel Vulić" />
     <meta property="og:image" content="/og.png" />
     <meta property="og:email" content="contact@vooolox.xyz" />
     <meta property="og:type" content="website" />
+    <link rel="canonical" href="https://vooolox.xyz" />
     <link rel="icon" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,29 +37,23 @@ import Header from "../components/Header.astro";
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script type="text/javascript">
+      window.va =
+        window.va ||
+        function () {
+          (window.vaq = window.vaq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
     <script>
-      import mixpanel from "mixpanel-browser";
-      import FingerprintJS from "@fingerprintjs/fingerprintjs";
-
-      const fp = await FingerprintJS.load();
-      const { visitorId } = await fp.get();
-
-      mixpanel.init("20add051a35a38f78ef76d9eff64cc00", {
-        debug: true,
-        track_pageview: true,
-        persistence: "localStorage",
-        ignore_dnt: true,
+      window.addEventListener("load", () => {
+        document.body.classList.toggle("grouploaded");
       });
-
-      mixpanel.identify(visitorId);
-      const response = await fetch("https://ipapi.co/json/");
-      const data = await response.json();
-      mixpanel.track("User info", { ...data, network_address: data.ip });
     </script>
   </head>
-  <body>
+  <body style="background-color: #000">
     <div
-      class="flex flex-col w-full h-screen min-h-[800px] overflow-x-hidden overflow-y-auto bg-cover bg-no-repeat bg-center bg-black bg-[url('/background-90.webp')] font-display"
+      class="flex flex-col w-full h-screen min-h-[800px] overflow-x-hidden overflow-y-auto bg-cover bg-no-repeat bg-center bg-black bg-[url('/background-90.webp')] font-display opacity-0 group-[loaded]:opacity-100 transition-opacity duration-1000"
     >
       <Header />
       <slot />
